# polydispers-lj-generator

./: .gitignore  README.md  analysis.ipynb  files_io.py  input_config.yaml  lj_config.yaml  main.py  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
notebooks/: analysis.ipynb
polydispers/: chain_generator.py  cli.py  core.py  files_io.py  input_config.py  lammps_in.tpl  stats.py  system_generator.py  topology_config.py
polydispers/templates/: lammps_in.j2
tests/: test_chain_generator.py  test_files_io.py  test_stats.py
