[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polydispers-lj-generator"
version = "0.1.0"
description = "A tool to generate polydisperse Lennard-Jones systems."
authors = [
    { name = "Jakub Krajniak", email = "jkrajniak@gmail.com" }
]
scripts = { "polydispers" = "polydispers.cli:cli" }
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "pyyaml",
    "click"
]

[tool.setuptools.packages.find]
where = [""]
include = ["polydispers"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
